Переписал тесты более компактно, удалил все лишнее

--- a/origami_test/CMakeLists.txt
+++ b/origami_test/CMakeLists.txt
@@ -21,6 +21,6 @@ if(GTEST_FOUND)
     include_directories(${GTEST_INCLUDE_DIRS})
 endif()
 
-add_executable(origami_test main_test.cpp character_sets_test.cpp preprocessor_test.cpp operators_test.cpp)
+add_executable(origami_test main_test.cpp operators_test.cpp preprocessor_test.cpp)
 target_link_libraries(origami_test gtest origami::origami_lexical)
 add_test(NAME origami_test COMMAND character_sets_test)
