Убрал поддержку предпроцессора. Предпроцессора не должно быть в итоговом коде.

--- a/origami_test/CMakeLists.txt
+++ b/origami_test/CMakeLists.txt
@@ -21,5 +21,5 @@ if(GTEST_FOUND)
     include_directories(${GTEST_INCLUDE_DIRS})
 endif()
 
-add_executable(origami_test main_test.cpp operators_test.cpp preprocessor_test.cpp abstract_syntax_tree_test.cpp)
+add_executable(origami_test main_test.cpp operators_test.cpp)
 target_link_libraries(origami_test ${GTEST_LIBRARIES} pthread origami::origami_lexical origami::origami_syntax)
