--- a/origami_lexical/CMakeLists.txt
+++ b/origami_lexical/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 project(origami_lexical)
 
-add_library(${PROJECT_NAME} src/lexical_conventions.cpp)
+file(GLOB ORIGAMI_LEXICAL_SRC ${PROJECT_SOURCE_DIR}/src/*.cpp)
+
+add_library(${PROJECT_NAME} ${ORIGAMI_LEXICAL_SRC})
 add_library(origami::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
