--- a/origami_test/CMakeLists.txt
+++ b/origami_test/CMakeLists.txt
@@ -3,5 +3,7 @@ project(origami_test)
 
 find_package(Catch2 REQUIRED)
 
-add_executable(origami_test main_test.cpp operators_test.cpp)
+file(GLOB ORIGAMI_TEST_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
+
+add_executable(origami_test ${ORIGAMI_TEST_SRC})
 target_link_libraries(origami_test Catch2::Catch2 origami::origami_lexical origami::origami_syntax)
