--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,13 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.5.1)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
     add_definitions(-D_DEBUG=ON)
 endif()
 
-project(origami)
+project(origami VERSION 1.0.0 DESCRIPTION "C++20 Module Example" LANGUAGES CXX)
 
 add_subdirectory(origami_lexical)
 add_subdirectory(origami_syntax)
