--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,15 @@ if(${CMAKE_VERSION} VERSION_LESS 3.14)
     cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
 endif()
 
-project(origami VERSION 1.0.0 DESCRIPTION "C++20 Static Code Analysis" LANGUAGES CXX)
+project(origami VERSION 0.0.1 DESCRIPTION "C++20 Static Code Analysis" LANGUAGES CXX)
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_DEBUG=ON")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_DEBUG=ON -D_GLIBCXX_DEBUG=ON -fsanitize=address")
+    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 endif()
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_subdirectory(origami_lexical)
 add_subdirectory(origami_syntax)
